Updates contact email address.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/tflynn/grunt-sst",
   "author": {
     "name": "Ted Flynn",
-    "email": "tflynn@nerdery.com"
+    "email": "acephale@gmail.com"
   },
   "repository": {
     "type": "git",
